# 2024_XMX

./: README.md
RM2024-Engineer-Renewed/: CMakeLists.txt
RM2024-Engineer-Renewed/Applications/: Applications.cmake
RM2024-Engineer-Renewed/Applications/Algorithm/: Algorithm.cpp  algo_pid.cpp
RM2024-Engineer-Renewed/Applications/Algorithm/Include/: algo_common.hpp  algo_crc.hpp  algo_pid.hpp
RM2024-Engineer-Renewed/Applications/Configuration/: conf_device.cpp  conf_module.cpp  conf_process.cpp
RM2024-Engineer-Renewed/Applications/Configuration/Include/: Configuration.hpp  conf_module.hpp
RM2024-Engineer-Renewed/Applications/Device/: dev_referee.cpp
RM2024-Engineer-Renewed/Applications/Device/Include/: dev_referee.hpp
RM2024-Engineer-Renewed/Applications/Device/Include/led/: led.hpp  led_common.hpp  led_ws2312.hpp
RM2024-Engineer-Renewed/Applications/Device/Include/mems/: mems.hpp  mems_common.hpp
RM2024-Engineer-Renewed/Applications/Device/Include/mtr/: motor.hpp  mtr_common.hpp
RM2024-Engineer-Renewed/Applications/Device/Include/rc/: remote.hpp
RM2024-Engineer-Renewed/Applications/Device/MEMS/: mems_bmi088.cpp
RM2024-Engineer-Renewed/Applications/Device/MTR/: motor.cpp  mtr_dm.cpp  mtr_servo.cpp
RM2024-Engineer-Renewed/Applications/Interface/: inf_uart.cpp
RM2024-Engineer-Renewed/Applications/Interface/Include/: Interface.hpp  inf_common.hpp  inf_spi.hpp  inf_uart.hpp
RM2024-Engineer-Renewed/Applications/Module/: Module.cpp
RM2024-Engineer-Renewed/Applications/Module/Chassis/: com_wheelset.cpp  mod_chassis.cpp
RM2024-Engineer-Renewed/Applications/Module/Gantry/: com_end.cpp  com_flip.cpp  com_joint_roll.cpp  com_joint_yaw.cpp  com_lift.cpp  com_pump.cpp  com_stretch.cpp  com_traverse.cpp  mod_gantry.cpp  proc_gantry.cpp
RM2024-Engineer-Renewed/Applications/Module/Gimbal/: com_lift.cpp  com_pitch.cpp  mod_gimbal.cpp  proc_gimbal.cpp
RM2024-Engineer-Renewed/Applications/Module/Include/: Module.hpp  mod_chassis.hpp  mod_common.hpp  mod_gantry.hpp  mod_gimbal.hpp
RM2024-Engineer-Renewed/Applications/System/: System.cpp
RM2024-Engineer-Renewed/Applications/System/Core/: Core.cpp  control.cpp
RM2024-Engineer-Renewed/Applications/System/Core/process/: proc_exchange.cpp  proc_gold_ore.cpp  proc_push_ore.cpp  proc_return_drive.cpp  proc_return_origin.cpp  proc_silver_ore.cpp
RM2024-Engineer-Renewed/Applications/System/Include/: Core.hpp  System.hpp  sys_vision.hpp
RM2024-Engineer-Renewed/Applications/System/Referee/: referee_ui.cpp
RM2024-Engineer-Renewed/Applications/System/Tasks/: task_heartbeat.cpp  task_monitor.cpp  task_system.cpp  task_update.cpp
RM2024-Engineer-Renewed/Applications/System/Vision/: sys_vision.cpp
RM2024-Engineer-Renewed/Drivers/: Drivers.cmake
RM2024-Engineer-Renewed/Targets/DM-MC02/: .mxproject  .project  DM-MC02.ioc
RM2024-Engineer-Renewed/Targets/DM-MC02/BSP/: startup.cpp
RM2024-Engineer-Renewed/Targets/DM-MC02/Core/Inc/: main.h
RM2024-Engineer-Renewed/Targets/DM-MC02/Core/Src/: gpio.c  usart.c
RM2024-Engineer-V2/: .clang-format  .gitignore  CMakeLists.txt
RM2024-Engineer-V2/Applications/Algorithm/: algo_crc.cpp  algo_pid.cpp
RM2024-Engineer-V2/Applications/Algorithm/Include/: Algorithm.hpp  algo_def.hpp  algo_pid.hpp
RM2024-Engineer-V2/Applications/Configuration/: Configuration.cpp  conf_device.cpp  conf_interface.cpp  conf_module.cpp  conf_process.cpp
RM2024-Engineer-V2/Applications/Configuration/Include/: Configuration.hpp  conf_common.hpp  conf_device.hpp  conf_interface.hpp  conf_process.hpp
RM2024-Engineer-V2/Applications/Device/: Device.cpp  dev_referee.cpp  dev_vision.cpp
RM2024-Engineer-V2/Applications/Device/Include/: Device.hpp  dev_common.hpp  dev_referee.hpp  dev_vision.hpp
RM2024-Engineer-V2/Applications/Device/LED/: led_ws2312.cpp
RM2024-Engineer-V2/Applications/Device/MEMS/: mems.cpp
RM2024-Engineer-V2/Applications/Device/MTR/: mtr_dji.cpp
RM2024-Engineer-V2/Applications/Device/RC/: rc_dr16.cpp  remote.cpp
RM2024-Engineer-V2/Applications/Interface/: Interface.cpp  inf_can.cpp  inf_spi.cpp  inf_uart.cpp
RM2024-Engineer-V2/Applications/Interface/Include/: inf_can.hpp  inf_uart.hpp
RM2024-Engineer-V2/Applications/Module/Chassis/: com_wheelset.cpp  proc_chassis.cpp
RM2024-Engineer-V2/Applications/Module/Gantry/: com_end.cpp  com_joint.cpp  com_lift.cpp  com_pump.cpp  com_stretch.cpp  com_traverse.cpp  mod_gantry.cpp  proc_gantry.cpp
RM2024-Engineer-V2/Applications/Module/Gimbal/: com_lift.cpp  com_pitch.cpp  mod_gimbal.cpp  proc_gimbal.cpp
RM2024-Engineer-V2/Applications/Module/Include/: Module.hpp  mod_chassis.hpp  mod_gantry.hpp  mod_gimbal.hpp  mod_subgantry.hpp
RM2024-Engineer-V2/Applications/Module/SubGantry/: com_lift.cpp  com_stretch.cpp  mod_subgantry.cpp  proc_subgantry.cpp
RM2024-Engineer-V2/Targets/DM-MC02/: .cproject  DM-MC02.ioc  STM32H723VGTX_FLASH.ld
(+30 files in other folders)
